@@ -4,26 +4,35 @@
 use strict;
 
 BEGIN {
-	use lib '.';
+    use lib '.';
     use Bio::Root::Test;
     
     test_begin(-tests => 3);
-		
-	use_ok('Bio::SeqIO::MultiFile');
+
+    use_ok 'Bio::SeqIO::MultiFile';
 }
 
 my $verbose = test_debug();
 
-my $mf = Bio::SeqIO::MultiFile->new(-format => 'Fasta' ,
-												-verbose => $verbose,
-												-files =>
-												[ test_input_file('multi_1.fa'),
-												  test_input_file('multi_2.fa')]);
-ok defined $mf;
+
+# Test multiple files, with a specified format
+ok my $mf = Bio::SeqIO::MultiFile->new(
+    -format  => 'Fasta' ,
+    -verbose => $verbose,
+    -files   => [ test_input_file('multi_1.fa'), test_input_file('multi_2.fa')],
+);
+
 my $count = 0;
-eval {
-	while (my $seq = $mf->next_seq() ) {
-		$count++;
-	}
-};
-is( $count,12 );
+while (my $seq = $mf->next_seq() ) {
+    $count++;
+}
+is $count, 12;
+
+
+# Automatically determine format
+ok $mf = Bio::SeqIO::MultiFile->new(
+    -verbose => $verbose,
+    -files   => [ test_input_file('multi_1.fa'), test_input_file('multi_2.fa')],
+);
+
+is $mf->format, 'fasta';
